<resources>
    <string name="app_name">Contacts</string>
    <string name="Createm">Create New</string>
    <string name="Editm">Edit Contact</string>
    <string name="Deletem">Delete Contact</string>
    <string name="Displaym">Display Contact</string>
    <string name="Finishm">Finish</string>
    <string name="fName" />
    <string name="fNameHint">First Name</string>
    <string name="lName" />
    <string name="lNameHint">Last Name</string>
    <string name="Company" />
    <string name="companyHint">Company</string>
    <string name="Phone" />
    <string name="phoneHint">Phone</string>
    <string name="Email" />
    <string name="emailHint">Email</string>
    <string name="URL" />
    <string name="Adress" />
    <string name="Birthday" />
    <string name="NickName" />
    <string name="fbURL" />
    <string name="TwitterURL" />
    <string name="Skype" />
    <string name="Youtube" />
    <string name="Save">Save</string>
    <string name="urlHint">URL</string>
    <string name="adressHint">Adress</string>
    <string name="birthdayHint">Birthday</string>
    <string name="nicknameHint">NickName</string>
    <string name="fburlHint">Facebook Profile URL</string>
    <string name="twitterurlHint">Twitter Profile URL</string>
    <string name="skypeHint">Skype</string>
    <string name="youtubechannelHint">Youtube Channel</string>
    <string name="cname" />
    <string name="listview" />
    <string name="clname" />
    <string name="cphone" />
</resources>
