<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


<ImageView
android:id="@+id/imageView"
android:layout_width="70dp"
android:layout_height="70dp"
android:layout_alignParentStart="true"
android:layout_alignParentTop="true"
android:layout_marginStart="21dp"
android:layout_marginTop="16dp"
app:srcCompat="@drawable/default_image" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="16dp"
        android:layout_toEndOf="@+id/imageView"

        android:layout_weight="1"
        android:text="@string/cname"
        android:textSize="15dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/textView"
        android:text="@string/clname"
        android:textSize="15dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView"
        android:layout_alignStart="@+id/textView"
        android:text="@string/cphone"
        android:textSize="15dp"
        android:textStyle="bold" />


</RelativeLayout>
